k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hyundai-sales-frontend-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hyundai-sales.local
      secretName: hyundai-sales-frontend-tls
  rules:
    - host: hyundai-sales.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
